# archive2rocrate

./: README.rst  pyproject.toml
src/archive2rocrate/: __init__.py  cli.py  config.py  scrape.py
src/nirdarchive2rocrate/: __init__.py  cli.py  config.py  convert.py  scrape.py
