[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "archive2rocrate"
authors = [{name = "Hanne Moa", email = "hanne.moa@sikt.no"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.11.0"
dependencies = ["requests"]

[project.scripts]
archive2rocrate = "archive2rocrate.cli:main"

[project.urls]
Home = "http://www.vg.no"
